--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
               <div style="margin-left: 1em;">
                 <li>GPA: 3.72/4.00</li>
               </div>
-              <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
+              <!-- <p>Quia nobis sequi</p> -->
             </div>
 
             <div class="resume-item">
@@ -611,9 +611,6 @@
               <!-- <h5></h5> -->
               <p><em>Hackerrank <br>
               </p>
-              <!-- <ul>
-                  <li> </li>
-               </ul> -->
             </div>
 
             <div class="resume-item">
@@ -624,9 +621,6 @@
               <p><em>MOS: Microsoft Office Word 2013 <br>
                   Score: 963/1000</em>
               </p>
-              <!-- <ul>
-                  <li> </li>
-               </ul> -->
             </div>
           </div>
 
@@ -636,13 +630,12 @@
             <div class="resume-item">
               <h4>Academy Code Review at Dicoding Indonesia</h4>
               <h5>June 2024 - Present</h5>
-              <p>Learning Path: 
-                <a href="https://www.dicoding.com/users/mkavaldo/academies"
-                target="_blank">Data Scientist</a> 
-                and 
-                <a href="https://www.dicoding.com/learningpaths/600"
-                target="_blank">Machine Learning Engineer</a>. Visit <a href="https://www.dicoding.com/users/mkavaldo/academies"
-                target="_blank"> my profile</a></p>
+              <p>Learning Path:
+                <a href="https://www.dicoding.com/users/mkavaldo/academies" target="_blank">Data Scientist</a>
+                and
+                <a href="https://www.dicoding.com/learningpaths/600" target="_blank">Machine Learning Engineer</a>.
+                Visit <a href="https://www.dicoding.com/users/mkavaldo/academies" target="_blank"> my profile</a>
+              </p>
               <p>As an External Code Reviewer, my responsibility:</p>
               <ul>
                 <li>Evaluate code deliverables to ensure compliance with standards and requirements.</li>
@@ -717,17 +710,10 @@
               </ul>
             </div>
 
-            <!-- <div class="resume-item">
-                <h4>Data Scientist</h4>
-                <h5>Desember - Present</h5>
-                <p><em>British Airways - Virtual Internship</em></p>
-              </div> -->
-
             <div class="resume-item">
               <a href="assets/img/certif_licen/vix-btpn.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <h4>Project-Based Intern: Data Engineer<span>&nbsp;</span><span class="bx bx-link"></span></h4>
               </a>
-              <!-- <h4>Data Engineer</h4> -->
               <h5>October 2022</h5>
               <p><em>Virtual Internship Experience | BTPN Syariah</em></p>
               Finishing various task related with the activity of Data Engineer from BTPN Syariah.
@@ -793,7 +779,6 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-vix/vix-kalbe.png" class="img-fluid" alt="">
               <div class=" portfolio-info">
-                <!-- <h4>VIX - Kalbe Nutritionals</h4> -->
                 <div class="portfolio-links">
                   <a href="pages/project-vix-kalbe-nutritionals.html" target="_blank" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
@@ -1158,7 +1143,6 @@
               <img src="assets/img/portfolio/thk/slide-0.webp" class="img-fluid" alt="">
               <div class=" portfolio-info">
                 <h4>COVID-19</h4>
-                <!-- <p>Web</p> -->
                 <div class="portfolio-links">
                   <a href="pages/project-thk.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Show Details"><i class="bx bx-link"></i></a>
@@ -1172,7 +1156,6 @@
               <img src="assets/img/portfolio/churn-prediction/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Telecom Churn Prediction</h4>
-                <!-- <p>Web</p> -->
                 <div class="portfolio-links">
                   <a href="pages/project-churn-prediction.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
@@ -1371,117 +1354,6 @@
         </div>
 
         <div class="row galery-container" data-aos="fade-up" data-aos-delay="200">
-          <!-- <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-data">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/coursera/ibm-da/IBM Data Analyst.png"
-                class="img-fluid img-responsive thumb" alt="">
-              <div class="portfolio-info">
-                <h4>IBM Data Analyst</h4>
-                <div class="portfolio-links">
-                  <a href="pages/gallery-coursera-ibm-da.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-data">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/coursera/gbi/Google Business Intelligence.png"
-                class="img-fluid img-responsive thumb" alt="">
-              <div class="portfolio-info">
-                <h4>Google Business Intelligence</h4>
-                <div class="portfolio-links">
-                  <a href="pages/gallery-coursera-gbi.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-data">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/coursera/gada/Google Advanced Data Analytics.png"
-                class="img-fluid img-responsive thumb" alt="">
-              <div class="portfolio-info">
-                <h4>Google Advance Data Analytics</h4>
-                <div class="portfolio-links">
-                  <a href="pages/gallery-coursera-gada.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-data">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/coursera/gda/Google Data Analytics.png"
-                class="img-fluid img-responsive thumb" alt="">
-              <div class="portfolio-info">
-                <h4>Google Data Analytics</h4>
-                <div class="portfolio-links">
-                  <a href="pages/gallery-coursera-gda.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-aws filter-cloud">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/coursera/aws-saa/AWS Cloud Solutions Architect.webp"
-                class="img-fluid img-responsive thumb" alt="">
-              <div class="portfolio-info">
-                <h4>AWS Cloud Solutions Architect</h4>
-                <div class="portfolio-links">
-                  <a href="pages/gallery-coursera-aws-saa.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-aws filter-cloud">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/coursera/aws-fund/AWS Fundamentals.png"
-                class="img-fluid img-responsive thumb" alt="">
-              <div class="portfolio-info">
-                <h4>AWS Fundamental</h4>
-                <div class="portfolio-links">
-                  <a href="assets/img/certif_licen/coursera/aws-fund/AWS Fundamentals.png"
-                    data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-pm">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/coursera/ibm/IBM Project Manager.png"
-                class="img-fluid img-responsive thumb" alt="">
-              <div class="portfolio-info">
-                <h4>IBM Project Manager</h4>
-                <div class="portfolio-links">
-                  <a href="pages/gallery-coursera-ibm.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-pm">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/coursera/gpm/google_project_management.png"
-                class="img-fluid img-responsive thumb" alt="">
-              <div class="portfolio-info">
-                <h4>Google Project Management</h4>
-                <div class="portfolio-links">
-                  <a href="pages/gallery-coursera-gpm.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div> -->
 
           <div id="sa" class="col-lg-3 col-md-6 galery-item filter-sa filter-intern">
             <div class="portfolio-wrap">
@@ -1565,9 +1437,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/dts/dts.png" class="img-fluid img-responsive thumb" alt="">
               <div class="portfolio-info">
-                <!-- <h4></h4> -->
                 <div class="portfolio-links">
-                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgaQkyP5fZJ0khZbdXg?e=niqo70" target="_blank" title="Show Details"><i class="bx bx-link"></i></a>
+                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgaQkyP5fZJ0khZbdXg?e=niqo70" target="_blank"
+                    title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -1579,7 +1451,8 @@
               <div class="portfolio-info">
                 <h4>AWS Certification</h4>
                 <div class="portfolio-links">
-                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgaQjiXaNh3wBR-DKKA?e=luCxjk" target="_blank" title="Show Details"><i class="bx bx-link"></i></a>
+                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgaQjiXaNh3wBR-DKKA?e=luCxjk" target="_blank"
+                    title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -1612,13 +1485,6 @@
           <div id="dicoding" class="col-lg-3 col-md-6 galery-item filter-data filter-ml">
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/dicoding/dicoding.png" class="img-fluid img-responsive thumb" alt="">
-              <!-- <div class="portfolio-info">
-                <h4>Dicoding</h4>
-                <div class="portfolio-links">
-                  <a href="pages/gallery-dicoding.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div> -->
               <div class="portfolio-info">
                 <div class="portfolio-links">
                   <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgZJlonSS5YAc6lEy2g?e=3giKgD" target="_blank"
@@ -1659,10 +1525,6 @@
               <img src="assets/img/certif_licen/dqlab.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Python, SQL, R, Excel</h4>
-                <!-- <div class="portfolio-links">
-                  <a href="pages/gallery-dqlab.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Show Details"><i class="bx bx-link"></i></a>
-                </div> -->
                 <div class="portfolio-links">
                   <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgZJmczdm4Rj_gha-rw?e=qxwGKQ" target="_blank"
                     title="Show Details"><i class="bx bx-link"></i></a>
@@ -1675,7 +1537,6 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/udemy.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <!-- <h4>Udemy Course</h4> -->
                 <div class="portfolio-links">
                   <a href="pages/gallery-udemy.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Show Details"><i class="bx bx-link"></i></a>
@@ -1688,7 +1549,6 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/gcp.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <!-- <h4>Google Cloud Platform</h4> -->
                 <div class="portfolio-links">
                   <a href="https://www.cloudskillsboost.google/public_profiles/aa062bc9-81cc-4a11-9f53-025437d13c1f"
                     target="_blank" title="Show Details"><i class="bx bx-link"></i></a>
@@ -1701,7 +1561,6 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/rapid-miner.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <!-- <h4>Rapid Miner Certifications</h4> -->
                 <div class="portfolio-links">
                   <a href="pages/gallery-rapid-miner.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
@@ -1714,11 +1573,6 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/hackerrank/hackerrank.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <!-- <h4>Hackerrank Certifications</h4> -->
-                <!-- <div class="portfolio-links">
-                  <a href="pages/gallery-hackerrank.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div> -->
                 <div class="portfolio-links">
                   <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgZJokyoRAmT9Sr9j5Q?e=4TVdiI" target="_blank"
                     title="Show Details"><i class="bx bx-link"></i></a>
@@ -1731,11 +1585,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/pacmann/pacmann.png" class="img-fluid img-responsive thumb" alt="">
               <div class="portfolio-info">
-                <!-- <h4></h4> -->
                 <div class="portfolio-links">
-                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgZJpkWU20rHJaO4IlQ?e=ZZCRNG" target="_blank"
-                    " title="Show Details"><i
-                      class="bx bx-link"></i></a>
+                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgZJpkWU20rHJaO4IlQ?e=ZZCRNG" target="_blank" " title=" Show
+                    Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -1746,8 +1598,8 @@
               <img src="assets/img/certif_licen/rakamin/rakamin-pbi.svg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-links">
-                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgaQhFef1oG_ncGK3SQ?e=DDlIM1" target="_blank" title="Show Details"><i
-                    class="bx bx-link"></i></a>
+                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgaQhFef1oG_ncGK3SQ?e=DDlIM1" target="_blank"
+                    title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -1924,22 +1776,6 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-8 mt-5 mt-lg-0">
-              <form action="https://formspree.io/f/xqkjvepr" method="post">
-                <div class="form-group mt-3">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-                <div class="form-group mt-3">
-                  <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-                </div>
-                <br>
-                <div class="g-recaptcha" data-sitekey="6LdOWkYjAAAAANLK2A8kK6Ph8RTWGril1hCAxy0g"></div>
-                <br><br>
-                <div class="text-center"><button type="submit" class="btn btn-primary" data-toggle="button"
-                    aria-pressed="false" autocomplete="off">Send Message</button></div>
-              </form>
-            </div> -->
-
           <div class="col-lg-8 mt-5 mt-lg-0">
             <form id="contactForm" action="https://formspree.io/f/xqkjvepr" method="post">
               <div class="form-group mt-3">
@@ -2014,7 +1850,7 @@
   </footer>
   <!-- End Footer -->
 
-  <div id="preloader"></div>
+  <!-- <div id="preloader"></div> -->
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
