--- a/index.html
+++ b/index.html
@@ -515,36 +515,36 @@
             <h3 class="resume-title">Licenses & Certifications</h3>
 
             <div class="resume-item">
-              <a href="#aws-ccp">
-                <h4>AWS Certified Solutions Architect Associate<span>&nbsp;</span><span class="bx bx-link"></span></h4>
-              </a>
+              <!-- <a href="#aws-ccp"> -->
+                <h5><a href="#aws-ccp">AWS Certified Solutions Architect Associate<span>&nbsp;</span><span class="bx bx-link"></span></a></h5>
+              <!-- </a>
               <h5>April 2024</h5>
-              <p><em>Amazon Web Service (AWS)</em></p>
+              <p><em>Amazon Web Service (AWS)</em></p> -->
             </div>
 
             <div class="resume-item">
-              <a href="#aws-ccp">
-                <h4>FGA Cloud Architecting<span>&nbsp;</span><span class="bx bx-link"></span></h4>
-              </a>
+              <!-- <a href="#aws-ccp"> -->
+                <h5>FGA Cloud Architecting<span>&nbsp;</span><span class="bx bx-link"></span></h5>
+              <!-- </a>
               <h5>April 2024</h5>
-              <p><em>DTS Kominfo</em></p>
+              <p><em>DTS Kominfo</em></p> -->
             </div>
 
             <div class="resume-item">
-              <a href="#aws-ccp">
-                <h4>AWS Certified Cloud Practitioner<span>&nbsp;</span><span class="bx bx-link"></span></h4>
-              </a>
+              <!-- <a href="#aws-ccp"> -->
+                <h5>AWS Certified Cloud Practitioner<span>&nbsp;</span><span class="bx bx-link"></span></h5>
+              <!-- </a>
               <h5>June 2023</h5>
-              <p><em>Amazon Web Service (AWS)</em></p>
+              <p><em>Amazon Web Service (AWS)</em></p> -->
             </div>
 
             <div class="resume-item">
-              <a href="#prakerja">
+              <!-- <a href="#prakerja"> -->
                 <h4>Pengembangan Jaringan Komputer dengan Mikrotik<span>&nbsp;</span><span class="bx bx-link"></span>
                 </h4>
-              </a>
+              <!-- </a>
               <h5>June 2023</h5>
-              <p><em>Kartu Prakerja | Karir.mu</em></p>
+              <p><em>Kartu Prakerja | Karir.mu</em></p> -->
             </div>
 
             <div class="resume-item">
@@ -775,6 +775,84 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/dicoding/breast-cancer.webp" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>Breast Cancer (MLOPS)</h4>
+                <div class="portfolio-links">
+                  <a href="https://maulanakavaldo.github.io/mlops-breast-cancer/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
+                      class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/dicoding/water-potability.webp" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>Water Potability (MLOPS)</h4>
+                <div class="portfolio-links">
+                  <a href="https://maulanakavaldo.github.io/mlops-water-pipeline/" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/dicoding/sentiment-analysis-shopee.webp" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>Sentiment Analysis Shopee App</h4>
+                <div class="portfolio-links">
+                  <a href="https://maulanakavaldo.github.io/sentiment-analysis/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
+                      class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/dicoding/fruits-classification.webp" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>Fruits Classification</h4>
+                <div class="portfolio-links">
+                  <a href="https://maulanakavaldo.github.io/fruits-classification/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
+                      class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/dicoding/movie-recommendation-system.webp" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>Movie Recommendation System</h4>
+                <div class="portfolio-links">
+                  <a href="https://maulanakavaldo.github.io/movie-recommendation-system/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
+                      class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/dicoding/car-price-prediction.webp" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>Car Price Prediction</h4>
+                <div class="portfolio-links">
+                  <a href="https://maulanakavaldo.github.io/movie-recommendation-system/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
+                      class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-3 col-md-6 portfolio-item filter-vix filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-vix/vix-kalbe.png" class="img-fluid" alt="">
@@ -873,71 +951,6 @@
               </div>
             </div>
           </div>
-
-          <!-- <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/dicoding/main.webp" class="img-fluid" alt="">
-              <div class=" portfolio-info">
-                <h4>Sentiment Analysis Shopee App</h4>
-                <div class="portfolio-links">
-                  <a href="" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
-                      class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/dicoding/main.webp" class="img-fluid" alt="">
-              <div class=" portfolio-info">
-                <h4>Movie Recommendation System</h4>
-                <div class="portfolio-links">
-                  <a href="" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
-                      class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/dicoding/main.webp" class="img-fluid" alt="">
-              <div class=" portfolio-info">
-                <h4>Car Price Prediction</h4>
-                <div class="portfolio-links">
-                  <a href="" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
-                      class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/dicoding/main.webp" class="img-fluid" alt="">
-              <div class=" portfolio-info">
-                <h4>Water Potability (MLOPS)</h4>
-                <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/mlops-water-pipeline/" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/dicoding/main.webp" class="img-fluid" alt="">
-              <div class=" portfolio-info">
-                <h4>Breast Cancer (MLOPS)</h4>
-                <div class="portfolio-links">
-                  <a href="" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
-                      class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div> -->
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
             <div class="portfolio-wrap">
