--- a/index.html
+++ b/index.html
@@ -516,89 +516,87 @@
 
             <div class="resume-item">
               <!-- <a href="#aws-ccp"> -->
-                <h5><a href="#aws-ccp">AWS Certified Solutions Architect Associate<span>&nbsp;</span><span class="bx bx-link"></span></a></h5>
+                <h5><a href="#">AWS Certified Solutions Architect Associate</a></h5>
               <!-- </a>
               <h5>April 2024</h5>
               <p><em>Amazon Web Service (AWS)</em></p> -->
             </div>
 
             <div class="resume-item">
-              <!-- <a href="#aws-ccp"> -->
-                <h5>FGA Cloud Architecting<span>&nbsp;</span><span class="bx bx-link"></span></h5>
-              <!-- </a>
-              <h5>April 2024</h5>
+              <a href="#aws-ccp">
+                <h5>FGA Cloud Architecting</h5>
+              </a>
+               <!--<h5>April 2024</h5>
               <p><em>DTS Kominfo</em></p> -->
             </div>
 
             <div class="resume-item">
-              <!-- <a href="#aws-ccp"> -->
-                <h5>AWS Certified Cloud Practitioner<span>&nbsp;</span><span class="bx bx-link"></span></h5>
-              <!-- </a>
-              <h5>June 2023</h5>
+              <a href="#aws-ccp">
+                <h5>AWS Certified Cloud Practitioner</h5>
+              </a>
+              <!-- <h5>June 2023</h5>
               <p><em>Amazon Web Service (AWS)</em></p> -->
             </div>
 
             <div class="resume-item">
-              <!-- <a href="#prakerja"> -->
-                <h4>Pengembangan Jaringan Komputer dengan Mikrotik<span>&nbsp;</span><span class="bx bx-link"></span>
-                </h4>
-              <!-- </a>
-              <h5>June 2023</h5>
+              <a href="#prakerja">
+                <h5>Pengembangan Jaringan Komputer dengan Mikrotik</h5>
+               </a>
+              <!--<h5>June 2023</h5>
               <p><em>Kartu Prakerja | Karir.mu</em></p> -->
             </div>
 
             <div class="resume-item">
-              <a href="#prakerja">
-                <h4>Analisis Data Marketing Menggunakan Google Sheet<span>&nbsp;</span><span class="bx bx-link"></span>
-                </h4>
+              <a href="#">
+                <h5>Analisis Data Marketing Menggunakan Google Sheet</h5>
               </a>
-              <h5>June 2023</h5>
-              <p><em>Kartu Prakerja | Rumah Siap Kerja</em></p>
+              <!-- <h5>June 2023</h5>
+              <p><em>Kartu Prakerja | Rumah Siap Kerja</em></p> -->
             </div>
 
             <div class="resume-item">
-              <a href="#proa-gc">
-                <h4>PROA: Google Cloud Fundamental <span>&nbsp;</span><span class="bx bx-link"></span></h4>
+              <a href="#">
+                <h5>PROA: Google Cloud Fundamental</h5>
               </a>
-              <h5>May 2023</h5>
-              <p><em>DTS KOMINFO | Google</em></p>
+              <!-- <h5>May 2023</h5>
+              <p><em>DTS KOMINFO | Google</em></p> -->
             </div>
 
             <div class="resume-item">
               <a href="#aca-alibaba">
-                <h4>ACA: Alibaba Cloud Security <span>&nbsp;</span><span class="bx bx-link"></span></h4>
+                <h5>ACA: Alibaba Cloud Security</h5>
               </a>
-              <h5>Mart 2023</h5>
-              <p><em>Alibaba Cloud</em></p>
+              <!-- <h5>Mart 2023</h5>
+              <p><em>Alibaba Cloud</em></p> -->
             </div>
 
             <div class="resume-item">
               <!-- <a href="#fga" data-gallery="portfolioGallery" class="portfolio-lightbox" ><h4>FGA: Data Science <span>&nbsp;</span><span class="bx bx-link"></span></h4></a> -->
               <a href="#fga">
-                <h4>FGA: Data Science <span>&nbsp;</span><span class="bx bx-link"></span></h4>
+                <h5>FGA: Data Science</h5>
               </a>
-              <a href="assets/img/certif_licen/fga_ds2.png" data-gallery="portfolioGallery"
+              <!-- <a href="assets/img/certif_licen/fga_ds2.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox"></a>
               <a href="assets/img/certif_licen/fga_ds3.png" data-gallery="portfolioGallery"
                 class="portfolio-lightbox"></a>
               <h5>October 2022</h5>
-              <p><em>DTS KOMINFO | Binar Academy</em></p>
+              <p><em>DTS KOMINFO | Binar Academy</em></p> -->
             </div>
 
             <div class="resume-item">
               <a href="assets/img/certif_licen/xlfl.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
-                <h4>XL Axiata Future LEaders <span>&nbsp;</span><span class="bx bx-link"></span></h4>
+                <h5>XL Axiata Future LEaders</h5>
               </a>
-              <h5>Januari 2021</h5>
-              <p><em>Future Skills Fisipol Universitas Gadjah Mada</em></p>
+              <!-- <h5>Januari 2021</h5>
+              <p><em>Future Skills Fisipol Universitas Gadjah Mada</em></p> -->
             </div>
 
             <div class="resume-item">
               <a href="#dqlab">
-                <h4>Data science with Python, MySQL, R<span>&nbsp;</span><span class="bx bx-link"></span></h4>
+                <h5>Data science with Python, MySQL, R</h5>
               </a>
               <!-- <h5>Januari 2020</h5> -->
-              <p><em>DQLab - Course</em></p>
+              <!-- <p><em>DQLab - Course</em></p> -->
               <!-- <ul>
                   <li> </li>
                </ul> -->
@@ -606,21 +604,21 @@
 
             <div class="resume-item">
               <a href="#hackerrank">
-                <h4>Programming Language Python, SQL<span>&nbsp;</span><span class="bx bx-link"></span></h4>
+                <h5>Programming Language Python, SQL</h5>
               </a>
               <!-- <h5></h5> -->
-              <p><em>Hackerrank <br>
-              </p>
+              <!-- <p><em>Hackerrank <br>
+              </p> -->
             </div>
 
             <div class="resume-item">
               <a href="#msword">
-                <h4>Microsoft Office Specialist <span>&nbsp;</span><span class="bx bx-link"></span></h4>
+                <h5>Microsoft Office Specialist</h5>
               </a>
-              <h5>April 2019</h5>
+              <!-- <h5>April 2019</h5>
               <p><em>MOS: Microsoft Office Word 2013 <br>
                   Score: 963/1000</em>
-              </p>
+              </p> -->
             </div>
           </div>
 
